# ha-mcp

./: CLAUDE.md  README.md  pyproject.toml  repository.yaml  requirements.txt
.github/workflows/: build-addon.yml
docs/: architecture.md  configuration.md  prompts.md  tools.md
ha_mcp_addon/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  build-prep.sh  build.yaml  config.yaml  run.sh
ha_mcp_addon/translations/: en.yaml
ha_mcp_addon/www/: index.html
src/ha_mcp/: __init__.py  __main__.py  config.py  server.py
src/ha_mcp/ha_client/: __init__.py  models.py  rest.py  websocket.py
src/ha_mcp/prompts/: __init__.py  prompts.py
src/ha_mcp/resources/: __init__.py  resources.py
src/ha_mcp/tools/: __init__.py  automation.py  blueprint.py  config_validation.py  dashboard.py  helper.py  registry.py  scene.py  script.py  state.py  suggestions.py
src/ha_mcp/util/: __init__.py  context.py  dry_run.py  entity_analysis.py  yaml_util.py
